import "const.proto";
import "excelconst.proto"
import "data.proto";
package Proto;

//派发启动战斗副本任务
message Task_L2B_StartBattle
{
	repeated PlayerServerInfo Users; //启动userID
	required int32 MapID;//启动地图
}


//游戏服务器注册
message G2L_Reg
{
	required int32 Version;//当前版本
	required string Host;//服务器IP
	required int32 Port;//服务器端口 公开
	required string ServiceHost;//内部访问IP
	required int32 ServicesProt ;//内部服务器端口
	required int32 ServerID;//服务器ID
	required int32 MaxPlayer; //服务器最大玩家数 数据库最大支持玩家
	required int32 CurrentPlayer;  //当前玩家数
}

//游戏服务器返回
message L2G_Reg
{
	required ErrorCode Code;
}


//检查session是否有效
message G2L_CheckUserSession
{
	required int64 UserID;//玩家ID
	required string Session;//当前登陆信息
}

//返回检查session结果
message L2G_CheckUserSession
{
	required ErrorCode Code;
}

//启动一个战斗仿真
message G2L_BeginBattle
{
	required int64 UserID; //发起请求的用户
	required int32 MapID;  //仿真地图MapID
}
//启动返回
message L2G_BeginBattle
{
	required ErrorCode Code;
	required GameServerInfo BattleServer;//当前战斗服务器
}

message G2L_GetLastBattle
{
	required int64 UserID;
}

message L2G_GetLastBattle
{
	required ErrorCode Code;
	required GameServerInfo BattleServer;//当前战斗服务器
}

//注册一个战斗服务器
message B2L_RegBattleServer
{
	required int32 Version;//当前版本
	required int32 ServicePort; //服务器端口
	required string ServiceHost;//服务器IP
	required int32 MaxBattleCount;//最大战斗仿真上限
}

//注册返回
message L2B_RegBattleServer
{
	required ErrorCode Code;//返回码
	required int32 ServiceServerID;//中心服务器（登陆服务器）给的当前服务器ID
}

//玩家完成战斗
message B2L_EndBattle
{
	required int64 UserID;//玩家ID
}

//玩家完成战斗
message L2B_EndBattle
{
	required ErrorCode Code;
}

message B2L_CheckSession
{
	required string SessionKey;
	required int64 UserID;
}

message L2B_CheckSession
{
	required ErrorCode Code;
}

//请求获得玩家信息
message B2G_GetPlayerInfo
{
	required int64 UserID; //当前用户ID
	required int32 ServiceServerID;//当前战斗服务器ID
}

//请求玩家信息返回
message G2B_GetPlayerInfo
{
	required ErrorCode Code;//返回信息
	required DHero Hero;    //英雄数据
	required PlayerPackage Package;//道具列表
}

//返回战斗数据
message B2G_BattleReward
{
	required int64 UserID;			 //用户ID
	required int32 Gold;  			 //用户金币
	required int32 MapID; 			 //当前战斗地图
	required int32 KillMonsterCount; //用户击杀怪物数
	required int64 DamageTotal;      //伤害数
	repeated PlayerItem DropItems;   //掉落物品
	repeated PlayerItem ConsumeItems;//消耗道具
}

//返回战斗数据
message G2B_BattleReward
{
	required ErrorCode Code;
}

